# catarse

./: .gitignore  .gitmodules  README.md  REPORTS.MD  pyproject.toml  requirements.txt
catarse/notebooks/: models.ipynb
