[tool.poetry]
name = "catarse"
version = "0.1.0"
description = ""
authors = ["João M <jmo.nick@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
plotly = "^5.23.0"
matplotlib = "^3.9.1.post1"
nbformat = ">=4.2.0"
scikit-learn = "^1.5.1"
scikit-optimize = "^0.10.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
